Create new particle filter, generate beamforming results

--- a/python/Beamforming.ipynb
+++ b/python/Beamforming.ipynb
@@ -457,6 +457,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d998d42",
+   "metadata": {},
+   "source": [
+    "## Stepper results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "90c8baf0",
@@ -473,13 +481,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dc2435f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from generate_flying_results import combine_stepper_df\n",
+    "data_df_all = pd.read_pickle(\"../datasets/2021_10_12_flying/all_data.pkl\")\n",
+    "data_df = data_df_all.loc[data_df_all.appendix==\"_5\"].iloc[0]\n",
+    "data_df\n",
+    "print(data_df.stft.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b42304ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_mics(mics):\n",
+    "    fig_pos1, ax_pos1 = plt.subplots()\n",
+    "    fig_pos1.set_size_inches(5, 5)\n",
+    "    for i, mic in enumerate(mics):\n",
+    "        ax_pos1.scatter(*mic)\n",
+    "    ax_pos1.set_xlabel(\"x [m]\")\n",
+    "    ax_pos1.set_ylabel(\"y [m]\")\n",
+    "    ax_pos1.axis(\"equal\")\n",
+    "    \n",
+    "def add_point(ax, position_cm, yaw_deg, color, **kwargs):\n",
+    "    ax.scatter(position_cm[0], position_cm[1], color=color, marker='o', **kwargs)\n",
+    "    x_dir = np.r_[np.cos(yaw_deg/180*np.pi), \n",
+    "                  np.sin(yaw_deg/180*np.pi)]\n",
+    "    x_len = 5\n",
+    "    ax.plot([position_cm[0], position_cm[0] + x_dir[0]*x_len], \n",
+    "            [position_cm[1], position_cm[1] + x_dir[1]*x_len], color=color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38d5c1d5",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "from crazyflie_demo.wall_detection import WallDetection\n",
+    "from utils.geometry import Context\n",
+    "from utils.inference import get_angle_distribution\n",
     "\n",
     "np.random.seed(1) # for particle filter\n",
     "\n",
@@ -490,49 +539,115 @@
     "\n",
     "n_positions = data_df.positions.shape[0]\n",
     "\n",
-    "alpha = 0.3\n",
-    "\n",
     "angle_estimates = []\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(10, 5)\n",
-    "chosen = np.arange(n_positions)[:30]\n",
+    "distance_estimates = []\n",
+    "distances = []\n",
+    "chosen = np.arange(n_positions)\n",
     "cmap = plt.get_cmap('viridis', lut=len(chosen))\n",
-    "distances_cm = -data_df.positions[chosen, 1]\n",
     "\n",
+    "#angles_deg = [132]\n",
     "WallDetection.BEAMFORM = True\n",
-    "wall_detection = WallDetection(python_only=True, estimator=\"histogram\")\n",
+    "wall_detection = WallDetection(python_only=True, estimator=\"split_particle\")\n",
+    "#wall_detection = WallDetection(python_only=True, estimator=\"particle\")\n",
+    "                               #angles_deg=angles_deg)\n",
+    "#wall_detection = WallDetection(python_only=True, estimator=\"moving\")\n",
+    "#wall_detection = WallDetection(python_only=True, estimator=\"histogram\")\n",
     "\n",
+    "#plot_mics(wall_detection.estimator.context.mics)\n",
+    "\n",
+    "fig_pos, ax_pos = plt.subplots()\n",
+    "fig_pos.set_size_inches(5, 5)\n",
+    "\n",
+    "#fig, ax = plt.subplots()\n",
+    "#fig.set_size_inches(10, 5)\n",
+    "\n",
+    "wall_detection.print_params()\n",
+    "\n",
+    "probs_mat = np.empty((0, 361))\n",
     "for i_col, i in enumerate(chosen):\n",
     "    print(f\"{i_col+1}/{len(chosen)}\")\n",
-    "    position_cm = data_df.positions[i, :3]\n",
+    "    position_cm = data_df.positions[i, :3] * 1e2\n",
     "    signals_f = data_df.stft[i]\n",
     "    yaw_deg = data_df.positions[i, 3]\n",
+    "    distance = -data_df.positions[i, 1] * 1e2\n",
     "    \n",
-    "    return_dict = wall_detection.listener_callback_offline(signals_f[:, nnz].T, freqs_all[nnz], position_cm, yaw_deg, timestamp=i_col)\n",
-    "    #angles = return_dict[\"angle_static\"]\n",
-    "    #probs = return_dict[\"prob_angle_static\"]\n",
+    "    if wall_detection.flight_check(position_cm):\n",
+    "        if (i % 10) == 0:\n",
+    "            label=\"pose {i}\"\n",
+    "        else:\n",
+    "            label=None\n",
+    "        add_point(ax_pos, position_cm, yaw_deg, cmap(i_col), label=label)\n",
+    "        \n",
+    "    return_dict = wall_detection.listener_callback_offline(\n",
+    "        signals_f[:, nnz].T, \n",
+    "        freqs_all[nnz], \n",
+    "        position_cm, \n",
+    "        yaw_deg, \n",
+    "        timestamp=i_col)\n",
+    "    if return_dict is None:\n",
+    "        print(\"skipping\")\n",
+    "        continue\n",
     "    \n",
-    "    angles = return_dict[\"angle_moving\"]\n",
-    "    probs = return_dict[\"prob_angle_moving\"]\n",
-    "    #angles, probs = get_angle_distribution(\n",
-    "    #    signals_f[:, nnz].T, freqs_all[nnz], context.mics.T\n",
-    "    #)\n",
-    "    ax.plot(angles, probs, color=cmap(i_col), label=distances_cm[i_col])\n",
-    "    angle_estimates.append(angles[np.argmax(probs)])\n",
-    "ax.legend()\n",
-    "ax.set_xlabel(\"angle [deg]\")\n",
-    "ax.set_ylabel(\"probability [-]\")\n",
+    "    a = return_dict[\"angle_moving\"]\n",
+    "    a_probs = return_dict[\"prob_angle_moving\"]\n",
+    "    \n",
+    "    d = return_dict[\"dist_moving\"]\n",
+    "    d_probs = return_dict[\"prob_dist_moving\"]\n",
+    "    \n",
+    "    angles, probs = get_angle_distribution(\n",
+    "        signals_f[:, nnz].T, freqs_all[nnz], wall_detection.estimator.context.mics.T\n",
+    "    )\n",
+    "    probs_mat = np.concatenate((probs_mat, probs[None, :]))\n",
+    "    #ax.plot(angles, probs, color=cmap(i_col), label=distance)\n",
+    "    \n",
+    "    angle_estimates.append(a[np.argmax(a_probs)])\n",
+    "    distance_estimates.append(d[np.argmax(d_probs)])\n",
+    "    distances.append(distance)\n",
+    "    \n",
+    "ax_pos.set_xlabel(\"x [m]\")\n",
+    "ax_pos.set_ylabel(\"y [m]\")\n",
+    "ax_pos.legend()\n",
+    "ax_pos.axis(\"equal\")\n",
+    "    \n",
+    "#ax.legend()\n",
+    "#ax.set_xlabel(\"angle [deg]\")\n",
+    "#ax.set_ylabel(\"probability [-]\")\n",
     "    \n",
     "plt.figure()\n",
-    "plt.plot(distances_cm, angle_estimates)\n",
+    "plt.plot(distances, angle_estimates)\n",
+    "plt.ylim(0, 360)\n",
     "plt.xlabel(\"distance [cm]\")\n",
-    "plt.ylabel(\"angle estimate [deg]\")"
+    "plt.ylabel(\"angle estimate [deg]\")\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(distances, distance_estimates)\n",
+    "plt.ylim(0, 58)\n",
+    "plt.xlabel(\"distance [cm]\")\n",
+    "plt.ylabel(\"distance estimate [cm]\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc2435f0",
+   "id": "08ebe697",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.pcolormesh(angles, distances, probs_mat)\n",
+    "plt.xlabel(\"angle [deg]\")\n",
+    "plt.ylabel(\"distance [cm]\")\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(angles, distances[:10], probs_mat[:10, :])\n",
+    "plt.xlabel(\"angle [deg]\")\n",
+    "plt.ylabel(\"distance [cm]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ad9494c",
    "metadata": {},
    "outputs": [],
    "source": []
