--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -298,22 +298,21 @@
     "simplify_angles = False\n",
     "fig_size_cdf = (10, 4)\n",
     "\n",
-    "fig_cdf, axs_cdf = plt.subplots(1, 2)\n",
-    "fig_cdf.set_size_inches(*fig_size_cdf)\n",
     "#fig_cdf.suptitle(f\"angles simplified {simplify_angles}\")\n",
     "\n",
     "discretization = \"fine\"\n",
     "\n",
-    "#appendices = [\"_new3\", \"_new6\"] + [f\"_{i}\" for i in range(1, 3)] \n",
     "appendices = [\"_new3\", \"_new6\"] + [f\"_{i}\" for i in range(1, 7)] \n",
-    "#appendices = [f\"_{i}\" for i in range(1, 7)] \n",
     "color = {f\"exp{a}\": \"C0\" if \"new\" in a else \"C1\" for i, a in enumerate(appendices) }\n",
     "color[\"random\"] = \"k\"\n",
     "color[\"fixed\"] = \"k\"\n",
     "\n",
     "relative_std = 0.0\n",
     "\n",
-    "for estimator in [\"particle\"]:#, \"moving\"]:\n",
+    "#for estimator in [\"particle\"]:#, \"moving\"]:\n",
+    "for estimator in [\"histogram\", \"moving\", \"particle\"]:#, \"moving\"]:\n",
+    "    fig_cdf, axs_cdf = plt.subplots(1, 2)\n",
+    "    fig_cdf.set_size_inches(*fig_size_cdf)\n",
     "    for i_app, appendix in enumerate(appendices):\n",
     "        \n",
     "        # flow deck was drifting a lot for experiments downstairs (carpet)\n",
@@ -323,7 +322,9 @@
     "        else:\n",
     "            correct = False\n",
     "        gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, flying=True, angles=True, correct=True)\n",
-    "        df_mat = pd.read_pickle(f\"results/flying_results_matrices_{estimator}{appendix}.pkl\") \n",
+    "        fname = f\"results/flying_results_matrices_{estimator}{appendix}_new.pkl\"\n",
+    "        df_mat = pd.read_pickle(fname) \n",
+    "        print(\"read\", fname)\n",
     "        df_here = df_mat[\n",
     "            (df_mat[\"calibration param\"]==chosen_calibration_param) & \n",
     "            (df_mat[\"simplify angles\"]==simplify_angles) & \n",
@@ -332,12 +333,14 @@
     "        for i, row in df_here.iterrows():\n",
     "            if estimator == \"particle\":\n",
     "                method = \"particle\"\n",
-    "            else:\n",
+    "            elif estimator == \"moving\":\n",
     "                method = f\"histogram {row['n window']}\"\n",
+    "            else:\n",
+    "                method = \"histogram\"\n",
     "                \n",
     "            if appendix == appendices[0]:\n",
     "                label = labels[method]\n",
-    "                print(\"label\", label)\n",
+    "                #print(\"label\", label)\n",
     "            else:\n",
     "                label = None\n",
     "                \n",
@@ -364,49 +367,48 @@
     "            fig, ax = plot_matrix(d_here, matrix_distances, #xvalues=times, \n",
     "                                  gt_values=gt_distances,\n",
     "                                  no_deco=no_deco, n_calib=n_calib_here)\n",
-    "            ax.set_title(f\" exp{appendix}\".replace(\"_\", \"\\\\_\"))\n",
+    "            ax.set_title(f\" exp{appendix} {estimator}\".replace(\"_\", \"\\\\_\"))\n",
+    "            fig.set_size_inches(*fig_size)\n",
+    "            \n",
+    "            fig, ax = plot_matrix(a_here, matrix_angles, \n",
+    "                                  gt_values=gt_angles, \n",
+    "                                  no_deco=no_deco, n_calib=n_calib_here)\n",
+    "            ax.set_title(f\" exp{appendix} {estimator}\".replace(\"_\", \"\\\\_\"))\n",
     "            fig.set_size_inches(*fig_size)\n",
     "\n",
-    "print(\"done\")            \n",
-    "figsize = 2\n",
-    "#leg = axs_cdf[1].legend(title=\"filter\", loc=\"lower left\", bbox_to_anchor=[1.0, 0.5])\n",
+    "    d_random = np.random.choice(range(7, 81), size=len(gt_distances))\n",
+    "    a_random = np.random.choice(range(360), size=len(gt_angles))\n",
+    "    lines = []; leg_labels = []\n",
+    "    axs_cdf[0].plot(sorted(np.abs(d_random-gt_distances)), np.linspace(0, 1, len(gt_distances)), color=color[\"random\"])\n",
+    "    line, = axs_cdf[1].plot(sorted(np.abs(angle_error(a_random, gt_angles))), np.linspace(0, 1, len(gt_angles)), color=color[\"random\"])\n",
+    "    lines.append(line); leg_labels.append(\"random\")\n",
+    "    \n",
+    "    d_fixed = (80 - 7) / 2\n",
+    "    a_fixed = 90 + 180\n",
+    "    a_random = np.random.choice(range(360), size=len(gt_angles))\n",
+    "    line, = axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances)), np.linspace(0, 1, len(gt_distances)), ls=\":\", color=color[\"fixed\"])\n",
+    "    lines.append(line); leg_labels.append(\"fixed\")\n",
     "\n",
-    "d_random = np.random.choice(range(7, 81), size=len(gt_distances))\n",
-    "a_random = np.random.choice(range(360), size=len(gt_angles))\n",
+    "    axs_cdf[1].plot(sorted(np.abs(angle_error(a_fixed, gt_angles))), np.linspace(0, 1, len(gt_angles)), ls=\":\", color=color[\"fixed\"])\n",
+    "    line, = axs_cdf[1].plot([], [], color=\"C0\")\n",
+    "    lines.append(line); leg_labels.append(\"dataset glass wall\")\n",
+    "    line, = axs_cdf[1].plot([], [], color=\"C1\")\n",
+    "    lines.append(line); leg_labels.append(\"dataset whiteboard\")\n",
+    "    axs_cdf[1].legend(lines, leg_labels, title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.5])\n",
     "\n",
-    "lines = []; labels = []\n",
-    "\n",
-    "axs_cdf[0].plot(sorted(np.abs(d_random-gt_distances)), np.linspace(0, 1, len(gt_distances)), color=color[\"random\"])\n",
-    "line, = axs_cdf[1].plot(sorted(np.abs(angle_error(a_random, gt_angles))), np.linspace(0, 1, len(gt_angles)), color=color[\"random\"])\n",
-    "lines.append(line); labels.append(\"random\")\n",
-    "\n",
-    "d_fixed = (80 - 7) / 2\n",
-    "a_fixed = 90 + 180\n",
-    "a_random = np.random.choice(range(360), size=len(gt_angles))\n",
-    "line, = axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances)), np.linspace(0, 1, len(gt_distances)), ls=\":\", color=color[\"fixed\"])\n",
-    "lines.append(line); labels.append(\"fixed\")\n",
-    "\n",
-    "axs_cdf[1].plot(sorted(np.abs(angle_error(a_fixed, gt_angles))), np.linspace(0, 1, len(gt_angles)), ls=\":\", color=color[\"fixed\"])\n",
-    "line, = axs_cdf[1].plot([], [], color=\"C0\")\n",
-    "lines.append(line); labels.append(\"dataset glass wall\")\n",
-    "line, = axs_cdf[1].plot([], [], color=\"C1\")\n",
-    "lines.append(line); labels.append(\"dataset whiteboard\")\n",
-    "axs_cdf[1].legend(lines, labels, title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.5])\n",
-    "#axs_cdf[1].add_artist(leg)\n",
-    "\n",
-    "axs_cdf[0].grid(True)\n",
-    "axs_cdf[1].grid(True)\n",
-    "axs_cdf[0].set_xlabel(\"absolute error [cm]\")\n",
-    "axs_cdf[1].set_xlabel(\"absolute error [deg]\")\n",
-    "axs_cdf[0].set_title(\"distance estimation\")\n",
-    "axs_cdf[1].set_title(\"angle estimation\")\n",
-    "axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
-    "axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
-    "axs_cdf[0].set_xlim(0, 30)\n",
-    "axs_cdf[1].set_xlim(0, 200)\n",
-    "fig_cdf.set_size_inches(8, 4)\n",
-    "fig_cdf.subplots_adjust(wspace=0.3)\n",
-    "save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_cdfs.pdf\")"
+    "    axs_cdf[0].grid(True)\n",
+    "    axs_cdf[1].grid(True)\n",
+    "    axs_cdf[0].set_xlabel(\"absolute error [cm]\")\n",
+    "    axs_cdf[1].set_xlabel(\"absolute error [deg]\")\n",
+    "    axs_cdf[0].set_title(\"distance estimation\")\n",
+    "    axs_cdf[1].set_title(\"angle estimation\")\n",
+    "    axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
+    "    axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
+    "    axs_cdf[0].set_xlim(0, 30)\n",
+    "    axs_cdf[1].set_xlim(0, 200)\n",
+    "    fig_cdf.set_size_inches(8, 4)\n",
+    "    fig_cdf.subplots_adjust(wspace=0.3)\n",
+    "    save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_cdfs.pdf\")"
    ]
   },
   {
