--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -269,12 +269,11 @@
     "\n",
     "from plot_helpers import color, ls, units, labels\n",
     "\n",
-    "# current:\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_timing.pkl\")\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
-    "\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
+    "\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_beamform.pkl\")\n",
     "plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
     "\n",
     "# add extra columns for plots\n",
@@ -290,6 +289,7 @@
     "    \"histogram 1\": 0.05,\n",
     "    \"histogram 3\": 0.1,\n",
     "    \"histogram 5\": 0.15,\n",
+    "    \"histogram\": 0\n",
     "}\n",
     "for (algorithm), df_dis in plot_df.groupby([\"algorithm\"]):\n",
     "    fig, ax = plt.subplots()\n",
@@ -349,9 +349,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot_helpers import add_double_legend\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
+    "from plot_helpers import add_double_legend, labels, ls\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
+    "\n",
+    "beamform = True\n",
+    "\n",
+    "if beamform:\n",
+    "    fname = \"results/stepper_results_beamform_test.pkl\"\n",
+    "else:\n",
+    "    fname = \"results/stepper_results_test.pkl\"\n",
+    "\n",
+    "plot_df = pd.read_pickle(fname)\n",
     "\n",
     "print(\"figsize\", figsize)\n",
     "X_MAX = {\n",
@@ -366,7 +375,9 @@
     "        for method, df in df_dis.groupby(\"method\"):\n",
     "            color_name  = method.split(' ')[0]\n",
     "            ls_name = method.split(color_name)[1].strip()\n",
-    "            if \"particle\" in ls_name:\n",
+    "            if \"split particle\" in ls_name:\n",
+    "                ls_name = \"split particle\"\n",
+    "            elif \"particle\" in ls_name:\n",
     "                ls_name = \"particle\"\n",
     "\n",
     "            cdf = sorted(np.abs(df.error))\n",
@@ -385,7 +396,10 @@
     "        axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
     "    add_double_legend(axs[i])\n",
     "    fig.subplots_adjust(wspace=0.3)\n",
-    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
+    "    if beamform: \n",
+    "        save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs_beamform.pdf\")\n",
+    "    else:\n",
+    "        save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
    ]
   },
   {
