Fix input to beamforming algorithms

--- a/python/Beamforming.ipynb
+++ b/python/Beamforming.ipynb
@@ -50,7 +50,6 @@
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "from utils.simulation import WIDEBAND_FILE, create_wideband_signal\n",
     "\n",
-    "mic_idx = 1\n",
     "distances = np.arange(10, 60, step=1)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
     "min_freq = 100\n",
@@ -81,11 +80,15 @@
     "from audio_stack.beam_former import BeamFormer\n",
     "from pyroomacoustics.soundsource import SoundSource\n",
     "\n",
+    "#chosen_mics = range(4)\n",
+    "chosen_mics = (0,1)\n",
+    "\n",
     "distance_cm = 500 # in the middle of the room\n",
-    "room = generate_room(distance_cm=distance_cm, source=False)\n",
+    "room = generate_room(distance_cm=distance_cm, source=False, chosen_mics=chosen_mics)\n",
     "\n",
     "mic_center = np.mean(room.mic_array.R, axis=1) # d x mics\n",
-    "mics = room.mic_array.R - mic_center[:, None] # 2, 4\n",
+    "mics = (room.mic_array.R - mic_center[:, None]) # 2, 4\n",
+    "print(mics.shape)\n",
     "beamformer = BeamFormer(mic_positions=mics.T)\n",
     "\n",
     "# add a sound source at given angle from mics\n",
@@ -117,7 +120,7 @@
    "outputs": [],
    "source": [
     "signals_f = get_buffers(room, signal, n_times=2) # 1 x 4 x n_freqs\n",
-    "signals_f = signals_f[0, :, :].T\n",
+    "signals_f = signals_f[0, chosen_mics, :].T # \n",
     "nnz = np.where(np.sum(np.abs(signals_f), axis=1) > 10.0)[0]\n",
     "\n",
     "plt.figure()\n",
@@ -579,7 +582,7 @@
     "        add_point(ax_pos, position_cm, yaw_deg, cmap(i_col), label=label)\n",
     "        \n",
     "    return_dict = wall_detection.listener_callback_offline(\n",
-    "        signals_f[:, nnz].T, \n",
+    "        signals_f[:, nnz], \n",
     "        freqs_all[nnz], \n",
     "        position_cm, \n",
     "        yaw_deg, \n",
