--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -346,19 +346,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from plot_helpers import add_double_legend, labels, ls\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
-    "beamform = True\n",
+    "beamform = False\n",
     "\n",
     "if beamform:\n",
-    "    fname = \"results/stepper_results_beamform_test.pkl\"\n",
+    "    fname = \"results/stepper_results_beamform_test2.pkl\"\n",
     "else:\n",
-    "    fname = \"results/stepper_results_test.pkl\"\n",
+    "    fname = \"results/stepper_results_test2.pkl\"\n",
     "\n",
     "plot_df = pd.read_pickle(fname)\n",
     "\n",
@@ -420,22 +422,27 @@
     "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_coarse.pkl\") # different ones, coarse only.\n",
     "#discretization = \"coarse\"\n",
     "\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_all.pkl\")\n",
-    "#discretization = \"coarse\"\n",
-    "#discretization = \"medium\"\n",
-    "#discretization = \"fine\"\n",
+    "beamform = True\n",
+    "#beamform = True\n",
     "\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final.pkl\")\n",
-    "discretization = \"fine\"\n",
+    "if beamform:\n",
+    "    plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final_beamform_test2.pkl\")\n",
+    "    chosen_dict={\"method\": \"calibrated particle 666\"}\n",
+    "    #chosen_dict={\"method\": \"theoretical particle 666\"} # works as espected\n",
+    "else:\n",
+    "    plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final_test2.pkl\")\n",
+    "    chosen_dict={\"method\": \"calibrated particle 666\"}\n",
+    "    #chosen_dict={\"method\": \"theoretical particle 666\"} # works as expected\n",
+    "    \n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final.pkl\")\n",
+    "#chosen_dict={\"discretization\":\"fine\"}\n",
+    "\n",
     "\n",
     "X_MAX = {\n",
     "    \"bayes angle\": plot_df[plot_df.algorithm==\"bayes angle\"].error.max(),\n",
     "    \"bayes distance\": 30 #plot_df[plot_df.algorithm==\"bayes distance\"].error.max()\n",
     "}\n",
     "\n",
-    "chosen_dict = {\n",
-    "    \"discretization\":discretization,\n",
-    "}\n",
     "try_df = filter_by_dict(plot_df, chosen_dict)\n",
     "try_df = try_df.loc[~try_df.method.isin([\"fixed\", \"random\"])]\n",
     "if len(try_df) == 0:\n",
@@ -448,12 +455,15 @@
     "\n",
     "fig, axs = plt.subplots(1, 2)\n",
     "fig.set_size_inches(4*figsize, 2*figsize)\n",
+    "\n",
     "for i, (algorithm, df_dis) in enumerate(plot_df.groupby(\"algorithm\", sort=False)):\n",
+    "    boxplots = {}\n",
     "    for j, (chosen_mics, df) in enumerate(df_dis.groupby(\"chosen_mics\", sort=False)):\n",
     "        #just a sanity check that each distance only appears once\n",
     "        if not len(df.distance) == len(df.distance.unique()):\n",
     "            print(df)\n",
     "            break\n",
+    "        boxplots[chosen_mics] = df.error\n",
     "        cdf = sorted(np.abs(df.error))\n",
     "        axs[i].plot(cdf, np.linspace(0, 1, len(cdf)), label=chosen_mics, color=colors(j))\n",
     "        axs[i].grid(True)\n",
@@ -462,10 +472,19 @@
     "    axs[i].set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
     "    axs[i].set_ylabel(\"cdf [-]\")\n",
     "    axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
+    "    \n",
+    "    fig_box, ax_plot = plt.subplots()\n",
+    "    ax_plot.boxplot(boxplots.values())\n",
+    "    ax_plot.set_xticklabels(boxplots.keys(), rotation=45)\n",
+    "\n",
     "axs[i].legend(loc=\"upper left\", bbox_to_anchor=[1.0,1.0], title=\"used mics\", ncol=2)\n",
     "#add_double_legend(axs[i])\n",
     "fig.subplots_adjust(wspace=0.3)\n",
-    "save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs.pdf\")"
+    "\n",
+    "if beamform: \n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs_beamform.pdf\")\n",
+    "else:\n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs.pdf\")"
    ]
   },
   {
